# btbchat

./: README.md
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/orthopteroid/btbchat/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: btbnative.cpp
android/app/src/main/java/com/orthopteroid/btbchat/: AppLogic.kt  MainActivity.kt
android/app/src/main/java/com/orthopteroid/btbchat/ui/main/: MainViewModel.kt
android/app/src/main/res/layout/: main_activity.xml  main_item.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/orthopteroid/btbchat/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
linux/: .gitignore  CMakeLists.txt  main.cpp
